// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sticky becomes sticky and unsticky when scrolling past it 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
    <div
      class="tc-sticky"
      data-tc-sticky-element="true"
      style="margin-top: 10px; margin-bottom: 20px; height: 60px; top: 0px; z-index: 999; position: fixed; left: 0px; width: 100%; transform: translateY(-10px);"
    />
  </div>
</body>
`;

exports[`Sticky becomes sticky and unsticky when scrolling past it 2`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px; display: none;"
        />
        <div
          class=""
          data-tc-sticky-element="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Sticky cleans sticky node unmounting 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div />
    </div>
  </div>
</body>
`;

exports[`Sticky remains sticky when continuing scrolling 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
    <div
      class="tc-sticky"
      data-tc-sticky-element="true"
      style="margin-top: 10px; margin-bottom: 20px; height: 60px; top: 0px; z-index: 999; position: fixed; left: 0px; width: 100%; transform: translateY(-10px);"
    />
  </div>
</body>
`;

exports[`Sticky renders with custom props 1`] = `
<body>
  <div
    id="react-root"
  >
    <span>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="display: none;"
        />
        <span
          class="test-class-name"
          data-tc-sticky-element="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        >
          children
        </span>
      </div>
    </span>
  </div>
</body>
`;

exports[`Sticky renders with default props 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="display: none;"
        />
        <div
          class=""
          data-tc-sticky-element="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Sticky shouldBeSticky is checked when deciding whether to become sticky 1`] = `
<body>
  <div
    id="react-root"
  >
    <div>
      <div>
        <div
          data-tc-sticky-placeholder="true"
          style="display: none;"
        />
        <div
          class=""
          data-tc-sticky-element="true"
          style="margin-top: 10px; margin-bottom: 20px; height: 60px;"
        />
      </div>
    </div>
  </div>
</body>
`;
